subir home banner responsive

--- a/src/stylus/modules/global.styl
+++ b/src/stylus/modules/global.styl
@@ -1,6 +1,6 @@
 html,
 body
-	font-family Open
+	font-family Roboto
 	font-weight 400
 .section
 	&-row
@@ -9,56 +9,9 @@ body
 		background-size cover
 		background-repeat no-repeat
 		background-position center
-#stadium
-	background-image url(../images/background/team-bg.jpg)
-	background-attachment fixed
-#service
-	background-color $red
-#onecontact
-	background-color #F7F7F7
-#red
-	padding 25px 0
-	background-color $red
 .btn
 	padding 10px 30px
 	&.btn
 		&-red
 			background-color $red
 			color white
-.banner-page
-	height 300px
-	background-size cover
-	background-repeat no-repeat
-	background-position center
-	background-attachment fixed
-.page
-	&-title
-		background-color $red
-		h1
-			margin 15px 0
-			color $white
-			text-transform uppercase
-			font-family OpenCond
-			font-weight 300
-		&-block
-			font-family OpenCond
-			text-transform uppercase
-			font-weight 700
-			text-align left
-			color $red
-			margin-bottom 20px
-	&-text
-		&-block
-			text-align left
-			h5
-				color $red
-				font-family OpenCond
-				font-weight 700
-				text-transform uppercase
-				span
-					color $gray
-					font-family Open
-					font-weight 400
-	&-figure
-		&-block
-			margin-bottom 20px
