--- a/src/stylus/tools/color.styl
+++ b/src/stylus/tools/color.styl
@@ -1,4 +1,5 @@
 $gray ?= #EFEFEF
-$dark_gray ?= #777777
+$gray_dark ?= #777777
+$gray_light ?= #EAEBED
 $white ?= #FFFFFF
-$red ?= #DC1301
+$red ?= #D52B1E
