--- a/src/template/modules/footer.jade
+++ b/src/template/modules/footer.jade
@@ -1,8 +1,19 @@
 .container
 	.row
-		.col-md-6
+		.col-sm-4
 			.footer-block.block-left
-				h5 © 2014 San Antonio, Perú
-		.col-md-6
+				ul.footer-list
+					li
+						a(href="#") Términos y condiciones
+					li
+						a(href="#") Contacto
+		.col-sm-4
+			.footer-block.block-center
+				h5 © 2015 smartlovers
+		.col-sm-4
 			.footer-block.block-right
-				h5 Powered by Caja Negra
+				ul.footer-list
+					li
+						a(href="#") Compartir
+					li
+						a(href="#") Siguenos
