--- a/src/stylus/modules/footer.styl
+++ b/src/stylus/modules/footer.styl
@@ -1,8 +1,40 @@
 .footer
-	background-color black
+	background-color $red
 	&-block
+		color $white
 		&.block
 			&-left
 				text-align left
+				display table
+				height 35px
+				float left
 			&-right
 				text-align right
+				display table
+				height 35px
+				float right
+			&-center
+				text-align center
+	&-list
+		display table-cell
+		margin-bottom 0
+		vertical-align middle
+		li
+			float left
+			border-left 1px solid $white
+			padding 0 1em
+			&:first-child
+				border-left 0
+				padding-left 0
+			&:last-child
+				padding-right 0
+			a
+				color $white
+				text-decoration none
+				font-family RobotoC
+				font-size .9em
+				text-transform uppercase
+	@media screen and (max-width 768px)
+		.col-sm-4
+			display table
+			margin 0 auto
