--- a/src/stylus/modules/index.styl
+++ b/src/stylus/modules/index.styl
@@ -1,8 +1,3 @@
 @import 'global'
+@import 'header'
 @import 'footer'
-@import 'banner'
-@import 'nav'
-@import 'contact'
-@import 'stadium'
-@import 'service'
-@import 'new'
