--- a/src/template/modules/nav.jade
+++ b/src/template/modules/nav.jade
@@ -1,39 +1,31 @@
-.container-fluid.navbar-full
-	.navbar-header
-		button.navbar-toggle.collapsed(type='button' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1' aria-expanded='false')
-			span.sr-only Toggle navigation
-			span.icon-bar
-			span.icon-bar
-			span.icon-bar
-		a.navbar-brand(href='index.html')
-			img.img-responsive(src='images/base/logo.png')
-	.navbar-social
-		ul.list-social
-			li
-				a(href="#")
-					i(class="fa fa-facebook" aria-hidden="true")
-			li
-				a(href="#")
-					i(class="fa fa-twitter" aria-hidden="true")
-			li
-				a(href="#")
-					i(class="fa fa-linkedin" aria-hidden="true")
-			li
-				a(href="#")
-					i(class="fa fa-google-plus" aria-hidden="true")
+nav.header-nav
+	.navbar-full
+		.navbar-header
+			a.navbar-brand(href='index.html')
+				img.img-responsive(src='images/base/logo.png')
+			.navbar-title
+				h3 UN BLOG DEDICADO A LAS NOVEDADES EN TECNOLOGÍA MÓVIL
 
-	.collapse.navbar-collapse.animated
-		.navbar-content
-			ul.nav.navbar-nav
-				li
-					a.Anchor(href="#header") Inicio
-				li
-					a.Anchor(href="#we") Nosotros
-				li
-					a.Anchor(href="#stadium") Campos
-				li
-					a.Anchor(href="#news") Noticias
-				li
-					a.Anchor(href="#service") Servicios
-				li
-					a.Anchor(href="#contact") Contáctanos
+		.collapse.navbar-collapse
+			.navbar-content
+				ul.nav.navbar-nav
+					li
+						a(href="#header")
+							i(class="icon-blog")
+							span BLOG
+							span SMARTLOVERS
+					li
+						a(href="#we")
+							i(class="icon-sales")
+							span ULTIMAS
+							span OFERTAS
+					li
+						a(href="#stadium")
+							i(class="icon-issu")
+							span CATÁLOGO DE
+							span PRODUCTOS
+					li
+						a(href="#news")
+							i(class="icon-plan")
+							span PLANES
+							span SMART
