subir home validado

--- a/src/template/index.jade
+++ b/src/template/index.jade
@@ -9,6 +9,26 @@ html(lang="es")
 		header.header
 			include modules/header
 
+		section.promo.section-row
+			include modules/promo
+
+		//- icon
+			<span class="icon-arrow-down"></span>
+			<span class="icon-blog"></span>
+			<span class="icon-camera-off"></span>
+			<span class="icon-camera-on"></span>
+			<span class="icon-hardware"></span>
+			<span class="icon-issu"></span>
+			<span class="icon-limited"></span>
+			<span class="icon-memory"></span>
+			<span class="icon-internet"></span>
+			<span class="icon-phone"></span>
+			<span class="icon-plan"></span>
+			<span class="icon-sales"></span>
+			<span class="icon-social"></span>
+			<span class="icon-system"></span>
+			<span class="icon-window"></span>
+
 		//- section.animated.section-row#we
 			.container
 				.row
