--- a/src/template/modules/nav.jade
+++ b/src/template/modules/nav.jade
@@ -1,14 +1,14 @@
 nav.header-nav
-	.navbar-full
-		.navbar-header
+	.navbarhome-full
+		.navbar-header.navbarhome-header
 			a.navbar-brand(href='index.html')
 				img.img-responsive(src='images/base/logo.png')
-			.navbar-title
+			.navbarhome-title
 				h3 UN BLOG DEDICADO A LAS NOVEDADES EN TECNOLOGÍA MÓVIL
 
-		.collapse.navbar-collapse
-			.navbar-content
-				ul.nav.navbar-nav
+		.collapse.navbar-collapse.navbarhome-collapse
+			.navbarhome-content
+				ul.nav.navbar-nav.navbarhome-nav
 					li
 						a(href="#header")
 							i(class="icon-blog")
@@ -20,7 +20,7 @@ nav.header-nav
 							span ULTIMAS
 							span OFERTAS
 					li
-						a(href="#stadium")
+						a(href="catalog.html")
 							i(class="icon-issu")
 							span CATÁLOGO DE
 							span PRODUCTOS
