--- a/src/stylus/modules/global.styl
+++ b/src/stylus/modules/global.styl
@@ -15,6 +15,9 @@ body
 		&-red
 			background-color $red
 			color white
+			transition all .3s
+			&:hover
+				background-color black			
 .square
 	&-btn
 		text-align center
