--- a/src/template/modules/headerint.jade
+++ b/src/template/modules/headerint.jade
@@ -13,7 +13,7 @@ nav.navbar.navbar-black
 		div(class="collapse navbar-collapse" id="bs-example-navbar-collapse-1")
 			ul.nav.navbar-nav
 				li
-					a(href="#")
+					a(href="bloglist.html")
 						i(class="icon-blog")
 						span Blog Smartlovers
 				li
