subir validacion de form

--- a/src/template/product.jade
+++ b/src/template/product.jade
@@ -30,7 +30,7 @@ html(lang="es")
 							h4 Precio de equipo
 							h5 *En plan conexión 190 con acuerdo de 18 meses.
 						.block-two
-							a(href="#" class="btn btn-red") Contratar
+							a(href="contact.html" class="btn btn-red") Contratar
 					.phone-plan
 						h3 Planes
 						.plan-radio
