--- a/src/stylus/modules/global.styl
+++ b/src/stylus/modules/global.styl
@@ -2,6 +2,13 @@ html,
 body
 	font-family Roboto
 	font-weight 400
+.form-control
+	&:focus,
+	&:hover,
+	&:active
+		border-color $red
+		box-shadow initial
+		outline initial
 .section
 	&-row
 		padding 50px 0
