--- a/src/stylus/modules/catalog.styl
+++ b/src/stylus/modules/catalog.styl
@@ -14,6 +14,19 @@
 		transition all .3s
 		&:hover
 			box-shadow 0 0 10px rgba($gray_dark, .5)
+		&.catalog-promo
+			position relative
+			&:before
+				top 0
+				content ''
+				width 80px
+				height 80px
+				background-image url(../images/base/tag-promo.png)
+				background-repeat no-repeat
+				background-size contain
+				position absolute
+				z-index 2
+				left 0
 	&-figure
 		img
 			max-width 100px
