--- a/src/stylus/modules/header.styl
+++ b/src/stylus/modules/header.styl
@@ -93,6 +93,7 @@
 		&-collapse
 			box-shadow none
 			border-top 0
+			position relative
 		&-nav
 			margin 0
 			li
@@ -100,8 +101,10 @@
 				margin-left .5em
 				float left
 				a
-					width 9em
-					font-size 1em
+					width 100%
+					display block
+					margin 0 auto
+					font-size .8em
 	@media screen and (max-width 540px)
 		&-nav
 			padding 0 15px
@@ -111,6 +114,10 @@
 				margin-bottom 15px
 				&:nth-child(2n)
 					margin-left 4%
+				a
+					span
+						&:first-child
+							margin-bottom -5px
 		&-header
 			a
 				img
