--- a/src/template/modules/headerint.jade
+++ b/src/template/modules/headerint.jade
@@ -25,7 +25,7 @@ nav.navbar.navbar-black
 						i(class="icon-issu")
 						span Catálogo de Productos
 				li
-					a(href="#")
+					a(href="plan.html")
 						i(class="icon-plan")
 						span Planes Smart
 
