--- a/src/template/modules/nav.jade
+++ b/src/template/modules/nav.jade
@@ -10,7 +10,7 @@ nav.header-nav
 			.navbarhome-content
 				ul.nav.navbar-nav.navbarhome-nav
 					li
-						a(href="#header")
+						a(href="bloglist.html")
 							i(class="icon-blog")
 							span BLOG
 							span SMARTLOVERS
@@ -25,7 +25,7 @@ nav.header-nav
 							span CATÁLOGO DE
 							span PRODUCTOS
 					li
-						a(href="#news")
+						a(href="plan.html")
 							i(class="icon-plan")
 							span PLANES
 							span SMART
