--- a/src/stylus/modules/catalog.styl
+++ b/src/stylus/modules/catalog.styl
@@ -74,6 +74,14 @@
 			position relative
 			font-weight 300
 			top 1px
+	&-filter
+		text-align right
+	&-form
+		display inline-block
+		padding 0 15px
+		.form
+			&-group
+				display inline-block
 	@media screen and (max-width 1200px)
 		&-details
 			.block-two
