--- a/src/stylus/modules/catalog.styl
+++ b/src/stylus/modules/catalog.styl
@@ -79,9 +79,11 @@
 	&-form
 		display inline-block
 		padding 0 15px
+		margin-bottom 10px
 		.form
 			&-group
 				display inline-block
+				margin-right 10px
 	@media screen and (max-width 1200px)
 		&-details
 			.block-two
@@ -102,5 +104,9 @@
 			width 100%
 			padding 0
 
-
+select
+	&.form
+		&-control
+			height 42px
+		
 
