--- a/src/template/catalog.jade
+++ b/src/template/catalog.jade
@@ -26,6 +26,7 @@ html(lang="es")
 			include modules/cataproduct
 		footer.footer
 			include modules/footer
+		include modules/modal
 		script(src="js/bundle.js")
 		script(src="js/vendor/bootstrap.js")
 		script(src="js/vendor/owl.carousel.min.js")
