--- a/src/stylus/modules/catalog.styl
+++ b/src/stylus/modules/catalog.styl
@@ -43,13 +43,13 @@
 			text-transform uppercase
 	&-details
 		display table
+		width 100%
 		.block
 			&-two
 				width 50%
-				padding-right 15px
 				display table-cell
 				vertical-align middle
-				text-align right
+				text-align center
 				&:nth-child(2)
 					border-left 1px solid $gray_light
 					padding-right 0
