--- a/src/stylus/tools/font.styl
+++ b/src/stylus/tools/font.styl
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,300|Roboto+Condensed:400,700,300&subset=latin,latin-ext')
+//@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,300|Roboto+Condensed:400,700,300&subset=latin,latin-ext')
 
-Roboto = 'Roboto', sans-serif
-RobotoC = 'Roboto Condensed', sans-serif
+//Roboto = 'Roboto', sans-serif
+//RobotoC = 'Roboto Condensed', sans-serif
+
+Roboto = 'arial', sans-serif
+RobotoC = 'arial', sans-serif
