--- a/src/template/blog.jade
+++ b/src/template/blog.jade
@@ -14,8 +14,8 @@ html(lang="es")
 					.banner-title
 						h2
 							i(class="icon-blog")
-							| Blog
-							span  Smartlovers
+							| Últimas
+							span  Noticias
 		section.section-row.blog
 			include modules/blogarticle
 		footer.footer
