--- a/src/template/modules/headerint.jade
+++ b/src/template/modules/headerint.jade
@@ -13,23 +13,21 @@ nav.navbar.navbar-black
 		div(class="collapse navbar-collapse" id="bs-example-navbar-collapse-1")
 			ul.nav.navbar-nav
 				li
-					a(href="bloglist.html")
-						i(class="icon-blog")
-						span Blog Smartlovers
+					a(href="/bloglist.html")
+						//-i(class="icon-blog")
+						span Ultimas notícias
 				li
-					a(href="#")
-						i(class="icon-sales")
-						span Ultimas Ofertas
+					a(href="/analisis.html")
+						span Analisís
 				li
-					a(href="catalog.html")
-						i(class="icon-issu")
-						span Catálogo de Productos
+					a(href="/smartguide.html")
+						span Smartguide
 				li
-					a(href="plan.html")
-						i(class="icon-plan")
-						span Planes Smart
-
-			p.navbar-text.navbar-right.hidden-sm
-				| DISTRIBUIDOR OFICIAL DE
-				a(href="http://www.claro.com.pe/" target="_blank") 
-					img(src="images/base/logo-claro.png")
+					a(href="/techshop.html")
+						span Techshop
+				li
+					a(href="/prensa.html")
+						span Prensa
+				.navbar-btn
+					.navbar-a
+						a(href="#" class="btn btn-red") Servicio Técnico
