--- a/src/stylus/modules/header.styl
+++ b/src/stylus/modules/header.styl
@@ -164,10 +164,12 @@
 		font-family RobotoC
 		a
 			display inline-block
+			margin-left 5px
 			img
 				max-width 50px
 				position relative
-				top -5px
-				margin-left 5px
+				top 0
+				left 0
+				margin-left 0
 		
 
