--- a/src/template/analisis.jade
+++ b/src/template/analisis.jade
@@ -14,10 +14,9 @@ html(lang="es")
 					.banner-title
 						h2
 							i(class="icon-blog")
-							| Últimas
-							span  Noticias
+							span  Análisis
 		section.section-row.bloglist-list
-			include modules/listblog
+			include modules/prensalist
 		footer.footer
 			include modules/footer
 		script(src="js/bundle.js")
