--- a/src/template/index.jade
+++ b/src/template/index.jade
@@ -3,6 +3,10 @@ html(lang="es")
 	head
 		meta( name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
 		title Smartlovers
+		link(rel="shortcut icon" href="images/favicon.ico")
+		link(rel="shortcut" href="images/favicon.ico" type="image/x-icon")
+		link(rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico")
+		link(rel="shortcut icon" type="image/x-icon" href="images/favicon.ico")
 		link(type="text/css" rel="stylesheet" href="css/vendor/owl.carousel.css")
 		link(type="text/css" rel="stylesheet" href="css/main.css")
 	body
