--- a/src/template/modules/blogarticle.jade
+++ b/src/template/modules/blogarticle.jade
@@ -17,8 +17,8 @@
 			.blognew-title
 				h3
 					span(class="icon-blog")
-					|  Nuevos
-					span  Artículos
+					|  Últimas
+					span  Noticias
 			- for (var i = 1 ; i <= 3 ; i++)
 				article.blognew
 					.blognew-image
