--- a/src/stylus/tools/color.styl
+++ b/src/stylus/tools/color.styl
@@ -2,5 +2,6 @@ $gray ?= #EFEFEF
 $gray_dark ?= #777777
 $gray_light ?= #EAEBED
 $white ?= #FFFFFF
-$red ?= #D52B1E
+$red ?= #cf477b
 $gray_section ?= #F9F9F9
+$black ?= #000000
