--- a/src/stylus/tools/icon.styl
+++ b/src/stylus/tools/icon.styl
@@ -69,3 +69,39 @@
 .icon-window:before {
 	content: "\e90e";
 }
+
+@font-face {
+	font-family: 'redes';
+	src:  url('../fonts/redes.eot?f7l8db');
+	src:  url('../fonts/redes.eot?f7l8db#iefix') format('embedded-opentype'),
+				url('../fonts/redes.ttf?f7l8db') format('truetype'),
+				url('../fonts/redes.woff?f7l8db') format('woff'),
+				url('../fonts/redes.svg?f7l8db#redes') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="ico-"], [class*=" ico-"] {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: 'redes' !important;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.ico-f:before {
+	content: "\e900";
+}
+.ico-i:before {
+	content: "\e901";
+}
+.ico-t:before {
+	content: "\e902";
+}
