--- a/src/template/product.jade
+++ b/src/template/product.jade
@@ -23,68 +23,15 @@ html(lang="es")
 				.product-description
 					.phone-title
 						h3 IPhone 6S
-						h4 APPLE
 					.phone-price
 						.block-two
 							h3 S/. 1200
-							h4 Precio de equipo
-							h5 *En plan conexión 190 con acuerdo de 18 meses.
-						.block-two
-							a(href="contact.html" class="btn btn-red") Contratar
 					.phone-plan
-						h3 Planes
-						.plan-radio
-							- for (var i = 1 ; i <= 5 ; i++)
-								span.block-plan
-									input(
-										type="radio"
-										name="Radios"
-										id="Radio#{i}"
-										class="radio"
-										value="Option 1"
-									)
-									label(for="Radio#{i}") Claro Conexión 99
-		section.section-row.product-feature
-			.container
-				h3.section-title
-					| Características del
-					span  Producto
-				article.phone-feature
-					.feature-icon
-						span(class="icon-window")
-					.feature-title
-						h3 4.5’
-						h4 PANTALLA
-				article.phone-feature
-					.feature-icon
-						span(class="icon-camera-on")
-					.feature-title
-						h3 16MP
-						h4 CAMARA
-				article.phone-feature
-					.feature-icon
-						span(class="icon-camera-on")
-					.feature-title
-						h3 8MP
-						h4 CAMARA FRONTAL
-				article.phone-feature
-					.feature-icon
-						span(class="icon-memory")
-					.feature-title
-						h3 16GB
-						h4 MEMORIA
-				article.phone-feature
-					.feature-icon
-						span(class="icon-hardware")
-					.feature-title
-						h3 1.3GHZ
-						h4 PROCESADOR
-				article.phone-feature
-					.feature-icon
-						span(class="icon-system")
-					.feature-title
-						h3 IOS
-						h4 SISTEMA
+						.phone-detail
+							h4 Detalles del producto
+							p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus aliquam totam ex non libero dicta officiis rerum quo veritatis, quae recusandae consequatur consequuntur fugiat obcaecati ab nobis quaerat impedit ut!
+						.phone-buy
+							a(href="contact.html" class="btn btn-red") Comprar
 
 				
 
