--- a/src/template/smartguide.jade
+++ b/src/template/smartguide.jade
@@ -16,7 +16,7 @@ html(lang="es")
 							i(class="icon-blog")
 							span Smartguide
 		section.section-row.bloglist-list
-			include modules/prensalist
+			include modules/smartguide
 		footer.footer
 			include modules/footer
 		script(src="js/bundle.js")
