--- a/src/stylus/modules/blog.styl
+++ b/src/stylus/modules/blog.styl
@@ -24,6 +24,9 @@
 			font-family Roboto
 			margin 0
 			margin-bottom 25px
+		img
+			max-width 100%
+			height 100%
 .blognew
 	border 1px solid $gray_light
 	cursor pointer
