--- a/src/stylus/modules/catalog.styl
+++ b/src/stylus/modules/catalog.styl
@@ -7,6 +7,7 @@
 		display inline-block
 		margin-right -4px
 		padding 0 10px
+		vertical-align top
 	&-article
 		border 1px solid $gray_light
 		border-radius 10px 10px 0 0
