--- a/src/stylus/modules/global.styl
+++ b/src/stylus/modules/global.styl
@@ -167,7 +167,7 @@ body
 			&:after
 				content ''
 				position absolute
-				border-left 1px solid rgba($white,.4)
+				border-left 1px solid rgba($black,.1)
 				left 0
 				top 10px
 				height 60%
@@ -188,8 +188,10 @@ body
 				&:hover,
 				&:focus,
 				&:active
-					background-color $white
-					color $red
+					background-color $gray_dark
+					color $white
+	&-collapse
+		padding 0
 	@media screen and (max-width 768px)
 		&-nav
 			float left
@@ -207,6 +209,53 @@ body
 			a
 				&.btn-red
 					margin-left 0
+					
 
-
-
+/*
+ * Smartguide
+ */
+.smartguide
+	&-article
+		width 70%
+		display inline-block
+		background-color $gray_light
+		padding 10px
+		margin-bottom 25px
+	&-title
+		h4
+			text-align left
+			font-family RobotoC
+			text-transform uppercase
+			font-weight 400
+	@media screen and (max-width 500px)
+		&-article
+			width 100%
+.redes
+	float right
+	height 50px
+	margin 0
+	display table
+	margin-left 15px
+	li
+		display table-cell
+		vertical-align middle
+		padding-left 5px
+		&:first-child
+			padding-left 0
+		a
+			display block
+			line-height 1em
+			text-decoration none
+			span
+				font-size 2em
+			&:hover,
+			&:focus,
+			&:active
+				span
+					color $red
+	@media screen and (max-width 992px)
+		display none
+	@media screen and (max-width 768px)
+		float none
+		margin 0 auto
+		display table
