--- a/src/stylus/modules/phone.styl
+++ b/src/stylus/modules/phone.styl
@@ -78,7 +78,7 @@
 			font-family Roboto
 			font-weight 700
 			color $red
-			font-size 3em
+			font-size 2em
 			margin 0
 		h4
 			font-family Roboto
@@ -98,6 +98,9 @@
 			text-transform uppercase
 		h4
 			margin 0
+	&-detail
+		p
+			margin-bottom 20px
 	@media screen and (max-width 1100px)
 		&-feature
 			padding 0
