--- a/src/stylus/tools/icon.styl
+++ b/src/stylus/tools/icon.styl
@@ -72,11 +72,11 @@
 
 @font-face {
 	font-family: 'redes';
-	src:  url('../fonts/redes.eot?f7l8db');
-	src:  url('../fonts/redes.eot?f7l8db#iefix') format('embedded-opentype'),
-				url('../fonts/redes.ttf?f7l8db') format('truetype'),
-				url('../fonts/redes.woff?f7l8db') format('woff'),
-				url('../fonts/redes.svg?f7l8db#redes') format('svg');
+	src:  url('../fonts/redes.eot?k54ts');
+	src:  url('../fonts/redes.eot?k54ts#iefix') format('embedded-opentype'),
+				url('../fonts/redes.ttf?k54ts') format('truetype'),
+				url('../fonts/redes.woff?k54ts') format('woff'),
+				url('../fonts/redes.svg?k54ts#redes') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -96,6 +96,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.ico-face:before {
+	content: "\e903";
+}
 .ico-f:before {
 	content: "\e900";
 }
