--- a/src/template/modules/blogarticle.jade
+++ b/src/template/modules/blogarticle.jade
@@ -7,6 +7,10 @@
 				.blog-text
 					h3 LOREM IPSUM DOLOR SIT
 					h5 USERPUBLIC - 14/04/2016
+					.blog-share
+						h4 Compartir:
+						.blog-btn
+							a(href="blog.html" class="btn btn-facebook") Facebook
 					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo rerum qui odio excepturi reiciendis nulla ab voluptate quasi, in, nemo velit, totam dignissimos. Laborum iusto iste reiciendis, qui cum quam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo rerum qui odio excepturi reiciendis nulla ab voluptate quasi, in, nemo velit, totam dignissimos. Laborum iusto iste reiciendis, qui cum quam.
 					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo rerum qui odio excepturi reiciendis nulla ab voluptate quasi, in, nemo velit, totam dignissimos. Laborum iusto iste reiciendis, qui cum quam.
 					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo rerum qui odio excepturi reiciendis nulla ab voluptate quasi, in, nemo velit, totam dignissimos. Laborum iusto iste reiciendis, qui cum quam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo rerum qui odio excepturi reiciendis nulla ab voluptate quasi, in, nemo velit, totam dignissimos. Laborum iusto iste reiciendis, qui cum quam.
