--- a/src/template/modules/listblog.jade
+++ b/src/template/modules/listblog.jade
@@ -10,4 +10,5 @@
 						h5 USERPUBLIC - 14/04/2016
 						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam maiores vero dicta voluptas, ducimus, voluptatibus id. Amet distinctio inventore praesentium neque alias, minus incidunt adipisci, accusamus earum repudiandae perferendis, obcaecati.
 						.bloglist-btn
+							a(href="blog.html" class="btn btn-facebook") #[span.ico-face ] Compartir
 							a(href="blog.html" class="btn btn-red") Ver más
