--- a/src/stylus/modules/blog.styl
+++ b/src/stylus/modules/blog.styl
@@ -23,10 +23,21 @@
 		h5
 			font-family Roboto
 			margin 0
-			margin-bottom 25px
+			margin-bottom 15px
 		img
 			max-width 100%
 			height 100%
+	&-share
+		padding 20px 0 25px
+		border-top 1px solid $gray_light
+		h4
+			display inline-block
+			margin 0
+	&-btn
+		display inline-block
+		margin-left 15px
+		a
+			padding 5px 20px
 .blognew
 	border 1px solid $gray_light
 	cursor pointer
