--- a/src/stylus/modules/bloglist.styl
+++ b/src/stylus/modules/bloglist.styl
@@ -1,32 +1,30 @@
 .bloglist
 	&-block
 		display inline-block
-		width 33.37%
+		width 100%
 		margin-right -4px
 		margin-bottom 25px
 		padding 0 15px 0 10px
-		&:first-child
-			width 100%
-			.bloglist
-				&-image
-					width 40%
-					height 250px
-					display inline-block
-					margin-right 0
-					vertical-align middle
-					figure
-						width 100%
-						height 100%
-						background-size cover
-						background-repeat no-repeat
-						background-position center
-				&-content
-					width 60%
-					display inline-block
-					margin-right -4px
-					vertical-align middle
-					position relative
-					right 3px
+		.bloglist
+			&-image
+				width 40%
+				height 250px
+				display inline-block
+				margin-right 0
+				vertical-align middle
+				figure
+					width 100%
+					height 100%
+					background-size cover
+					background-repeat no-repeat
+					background-position center
+			&-content
+				width 60%
+				display inline-block
+				margin-right -4px
+				vertical-align middle
+				position relative
+				right 3px
 	&-article
 		border 1px solid $gray_light
 		border-radius 10px
@@ -48,13 +46,14 @@
 		padding 20px
 		h5
 			font-family Roboto
-			margin 0
+			margin 5px 0 1em
 			font-size .9em
 			margin-bottom 1em
 		h3
 			font-family RobotoC
 			margin 0
 			font-size 1.5em
+			font-weight 600
 		p
 			display block
 			display -webkit-box
@@ -71,25 +70,29 @@
 		.btn
 			display inline-block
 			border-radius 20px
+			&:first-child
+				margin-right 15px
 	@media screen and (max-width 996px)
 		&-block
-			width 50%
+			width 100%
 	@media screen and (max-width 768px)
 		&-list
 			overflow hidden
+		&-btn
+			.btn
+				padding 10px 25px
 	@media screen and (max-width 480px)
 		&-block
 			width 100%
 			&:last-child
 				margin-bottom 0
-			&:first-child
-				.bloglist
-					&-image
-						width 100%
-						height 150px
-						display block
-					&-content
-						width 100%
-						display block
-						text-align left
-						padding 20px
+			.bloglist
+				&-image
+					width 100%
+					height 150px
+					display block
+				&-content
+					width 100%
+					display block
+					text-align left
+					padding 20px
