--- a/src/stylus/modules/prensa.styl
+++ b/src/stylus/modules/prensa.styl
@@ -35,10 +35,12 @@
 			margin 0
 			font-size .9em
 			margin-bottom 1em
+			margin-top 5px
 		h3
 			font-family RobotoC
 			margin 0
 			font-size 1.5em
+			font-weight 600
 		p
 			display block
 			display -webkit-box
